[gd_scene load_steps=3 format=3 uid="uid://djkw7maaajn66"]

[ext_resource type="Script" path="res://examples/Renderer/Renderer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://datrhxrev4u75" path="res://addons/godot_task_server/TaskServerDock.tscn" id="2_frqvo"]

[node name="Renderer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 270

[node name="ControlContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="XSpinBox" type="SpinBox" parent="HSplitContainer/ControlContainer"]
layout_mode = 2
min_value = 2.0
value = 15.0
prefix = "X:"

[node name="YSpinBox2" type="SpinBox" parent="HSplitContainer/ControlContainer"]
layout_mode = 2
min_value = 2.0
value = 10.0
prefix = "Y:"

[node name="ClearButton" type="Button" parent="HSplitContainer/ControlContainer"]
layout_mode = 2
text = "Clear"

[node name="StartButton" type="Button" parent="HSplitContainer/ControlContainer"]
layout_mode = 2
text = "Start"

[node name="TaskServer" parent="HSplitContainer/ControlContainer" instance=ExtResource("2_frqvo")]
layout_mode = 2

[node name="BackButton" type="Button" parent="HSplitContainer/ControlContainer"]
layout_mode = 2
text = "Back to menu"

[node name="RenderChunkContainer" type="GridContainer" parent="HSplitContainer"]
layout_mode = 2
columns = 3

[connection signal="value_changed" from="HSplitContainer/ControlContainer/XSpinBox" to="." method="_on_XSpinBox_value_changed"]
[connection signal="value_changed" from="HSplitContainer/ControlContainer/YSpinBox2" to="." method="_on_YSpinBox2_value_changed"]
[connection signal="pressed" from="HSplitContainer/ControlContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="HSplitContainer/ControlContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HSplitContainer/ControlContainer/BackButton" to="." method="_on_BackButton_pressed"]
